--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1> Manual Proyecto MYXER   </h1>
-    <img src=captura1.png alt="Captura de pantalla 1">
+    <img src=Captura1.png alt="Captura de pantalla 1">
 </body>
 </html>
