--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> Manual Proyecto MYXER   </h1>
-    <img src="captura1.png" alt="Captura del manual" width="600">
+    <img src="captura1.PNG" alt="Captura del manual" width="600">
 
 
 </body>
