--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1> Manual Proyecto MYXER   </h1>
+    <p>Primero se muestra </p>
     <img src="imagenes/captura1.png" alt="Captura del manual" width="600">
+    <img src=imagenes/Captura de pantalla 2025-09-17 a la(s) 8.22.22 p.m..png>
 
 
 </body>
