--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <h1> Manual Proyecto MYXER   </h1>
-    <p>Primero se muestra </p>
+    <p>Primero se muestra el sistema de gestion y te las opciones que puedes hacer
+        dentro de este codigo  </p>
     <img src="imagenes/captura1.png" alt="Captura del manual" width="600">
-    <img src=imagenes/Captura de pantalla 2025-09-17 a la(s) 8.22.22 p.m..png>
+    <p>Si das enter </p>
+    <img src="imagenes/captura2.png" alt="Captura del manual" width="600">
+    
 
 
 </body>
