--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <h1> Manual Proyecto MYXER   </h1>
     <p>Primero se muestra el sistema de gestion y te las opciones que puedes hacer
         dentro de este codigo  </p>
+        <p></p>
+    <p>Si Das enter podras ver el menu principal donde podras ver las emergencias
+        atender clientes, gestionar las tareas, ver todo, los empledos y salir
+    </p>
     <img src="imagenes/captura1.png" alt="Captura del manual" width="600">
-    <p>Si das enter </p>
+    <p>Si das enter podras ver el primer menu de</p>
     <img src="imagenes/captura2.png" alt="Captura del manual" width="600">
     
 
