--- a/index.html
+++ b/index.html
@@ -10,14 +10,25 @@
     <p>Primero se muestra el sistema de gestion y te las opciones que puedes hacer
         dentro de este codigo  </p>
         <p></p>
-    <p>Si Das enter podras ver el menu principal donde podras ver las emergencias
+    <p>Si das enter podras ver el menu principal donde podras ver las emergencias
         atender clientes, gestionar las tareas, ver todo, los empledos y salir
     </p>
     <img src="imagenes/captura1.png" alt="Captura del manual" width="600">
-    <p>Si das enter podras ver el primer menu de</p>
+    <p></p>
+    <p>Si introduces "1" podras ver el primer menu de emergencias y si nuevamente introduces la opcion 1 podras agregar una nueva 
+        emergencia</p>
+        <p></p>
     <img src="imagenes/captura2.png" alt="Captura del manual" width="600">
-    
-
-
+    <p>Despues si introduces la opcion "2" podras atender la emergencia que esta en el tope
+        y como en este caso solo hay una emergencia pues se atiende esa
+    </p>
+    <p></p>
+    <img src="imagenes/captura3.png" alt="Captura del manual" width="600">
+    <p>Si introduces la opcion 4 podras ver la emergencia del tope que en este caso solo es "comida urgente" </p>
+    <p></p>
+    <img src="imagenes/captura4.png" alt="Captura del manual" width="600">
+    <p>Si introduces la opcion 5 podras ver la lista de emergencias como a continuacion se muestra</p>
+    <p></p>
+    <img src="imagenes/captura5.png" alt="Captura del manual" width="600">
 </body>
 </html>
