--- a/index.html
+++ b/index.html
@@ -4,31 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            text-align: center; 
+            font-family: Arial, sans-serif; 
+        }
+
+        img {
+            display: block; 
+            margin: 10px auto; 
+            max-width: 90%; 
+            height: auto; 
+        }
+
+        p {
+            margin: 10px 0; /* Espaciado entre párrafos */
+        }
+    </style>
 </head>
 <body>
-    <h1> Manual Proyecto MYXER   </h1>
-    <p>Primero se muestra el sistema de gestion y te las opciones que puedes hacer
-        dentro de este codigo  </p>
-        <p></p>
-    <p>Si das enter podras ver el menu principal donde podras ver las emergencias
-        atender clientes, gestionar las tareas, ver todo, los empledos y salir
-    </p>
+    <h1> Manual Proyecto MYXER </h1>
+    <p>Primero se muestra el sistema de gestion y te las opciones que puedes hacer dentro de este código</p>
+    <p>Si das enter podrás ver el menú principal donde podrás ver las emergencias, atender clientes, gestionar las tareas, ver todo, los empleados y salir</p>
     <img src="imagenes/captura1.png" alt="Captura del manual" width="600">
-    <p></p>
-    <p>Si introduces "1" podras ver el primer menu de emergencias y si nuevamente introduces la opcion 1 podras agregar una nueva 
-        emergencia</p>
-        <p></p>
+    <p>Si introduces "1" podrás ver el primer menú de emergencias y si nuevamente introduces la opción 1 podrás agregar una nueva emergencia</p>
     <img src="imagenes/captura2.png" alt="Captura del manual" width="600">
-    <p>Despues si introduces la opcion "2" podras atender la emergencia que esta en el tope
-        y como en este caso solo hay una emergencia pues se atiende esa
-    </p>
-    <p></p>
+    <p>Después si introduces la opción "2" podrás atender la emergencia que está en el tope y como en este caso solo hay una emergencia pues se atiende esa</p>
     <img src="imagenes/captura3.png" alt="Captura del manual" width="600">
-    <p>Si introduces la opcion 4 podras ver la emergencia del tope que en este caso solo es "comida urgente" </p>
-    <p></p>
+    <p>Si introduces la opción 4 podrás ver la emergencia del tope que en este caso solo es "comida urgente"</p>
     <img src="imagenes/captura4.png" alt="Captura del manual" width="600">
-    <p>Si introduces la opcion 5 podras ver la lista de emergencias como a continuacion se muestra</p>
-    <p></p>
+    <p>Si introduces la opción 5 podrás ver la lista de emergencias como a continuación se muestra</p>
     <img src="imagenes/captura5.png" alt="Captura del manual" width="600">
+    <p>Después si introduces la opción "0" podrás volver al menú principal</p>
+    <img src="imagenes/captura6.png" alt="Captura del manual" width="600">
+    <p>Ya de nuevo en el menú principal</p>
 </body>
 </html>
