--- a/index.html
+++ b/index.html
@@ -25,18 +25,34 @@
 <body>
     <h1> Manual Proyecto MYXER </h1>
     <p>Primero se muestra el sistema de gestion y te las opciones que puedes hacer dentro de este código</p>
-    <p>Si das enter podrás ver el menú principal donde podrás ver las emergencias, atender clientes, gestionar las tareas, ver todo, los empleados y salir</p>
+    <p>Si das enter podrás ver el menú principal donde podrás ver las emergencias, atender clientes, 
+        gestionar las tareas, ver todo, los empleados y salir</p>
     <img src="imagenes/captura1.png" alt="Captura del manual" width="600">
-    <p>Si introduces "1" podrás ver el primer menú de emergencias y si nuevamente introduces la opción 1 podrás agregar una nueva emergencia</p>
+    <p>Si introduces "1" podrás ver el primer menú de emergencias y si nuevamente introduces 
+        la opción 1 podrás agregar una nueva emergencia</p>
     <img src="imagenes/captura2.png" alt="Captura del manual" width="600">
-    <p>Después si introduces la opción "2" podrás atender la emergencia que está en el tope y como en este caso solo hay una emergencia pues se atiende esa</p>
+    <p>Después si introduces la opción "2" podrás atender la emergencia que está en el tope y 
+        como en este caso solo hay una emergencia pues se atiende esa</p>
     <img src="imagenes/captura3.png" alt="Captura del manual" width="600">
-    <p>Si introduces la opción 4 podrás ver la emergencia del tope que en este caso solo es "comida urgente"</p>
+    <p>Si introduces la opción 4 podrás ver la emergencia del tope que en este caso 
+        solo es "comida urgente"</p>
     <img src="imagenes/captura4.png" alt="Captura del manual" width="600">
-    <p>Si introduces la opción 5 podrás ver la lista de emergencias como a continuación se muestra</p>
+    <p>Si introduces la opción 5 podrás ver la lista de emergencias como a continuación 
+        se muestra</p>
     <img src="imagenes/captura5.png" alt="Captura del manual" width="600">
     <p>Después si introduces la opción "0" podrás volver al menú principal</p>
     <img src="imagenes/captura6.png" alt="Captura del manual" width="600">
     <p>Ya de nuevo en el menú principal</p>
+    <h1> Menú de Clientes </h1>
+    <p>Si introduces la opción "2" podrás ver el menú de clientes y si introduces la opción "1" 
+        podrás agregar un nuevo cliente</p>
+    <img src="imagenes/captura1.png" alt="Captura del manual" width="600">
+    <img src="imagenes/captura7.png" alt="Captura del manual" width="600">
+    <p>Despues de agregar el cliente nos preguntara que quiere este como se muestra a continuacion</p>
+    <img src="imagenes/captura8.png" alt="Captura del manual" width="600">
+    <p>Al agregar algo el programa nos dara la descripcion del platillo y si queremos confirmar la selccion
+        y si la agregamos entonces el se mostrara el precio y el tiempo estimado de preparacion
+    </p>
+    <img src="imagenes/captura9.png" alt="Captura del manual" width="600">
 </body>
 </html>
