--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@
         y si la agregamos entonces el se mostrara el precio y el tiempo estimado de preparacion
     </p>
     <img src="imagenes/captura9.png" alt="Captura del manual" width="600">
+    <p>En el menu de clientes si introducimos la opcion "2" podremos </p>
 </body>
 </html>
