--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         y si la agregamos entonces el se mostrara el precio y el tiempo estimado de preparacion
     </p>
     <img src="imagenes/captura9.png" alt="Captura del manual" width="600">
-    <p>En el menu de clientes si introducimos la opcion "2" podremos </p>
+    <p>En el menu de clientes si introducimos la opcion "2" podremos atender al cliente y los detalles 
+        de este </p>
+    <img src="imagenes/captura10.png" alt="Captura del manual" width="600">
+    <p><b>Atender al cliente en la opcion de lista (opcion 3 del menu de clientes)</b></p>
+    <img src="imagenes/captura11.png" alt="Captura del manual" width="600">
 </body>
 </html>
