--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <p>Si introduces la opción "2" podrás ver el menú de clientes y si introduces la opción "1" 
         podrás agregar un nuevo cliente</p>
     <img src="imagenes/captura1.png" alt="Captura del manual" width="600">
-    <img src="imagenes/captura7.png" alt="Captura del manual" width="600">
+    <img src="imagenes/capturalol.png" alt="Captura del manual" width="600">
     <p>Despues de agregar el cliente nos preguntara que quiere este como se muestra a continuacion</p>
     <img src="imagenes/captura8.png" alt="Captura del manual" width="600">
     <p>Al agregar algo el programa nos dara la descripcion del platillo y si queremos confirmar la selccion
@@ -59,5 +59,6 @@
     <img src="imagenes/captura10.png" alt="Captura del manual" width="600">
     <p><b>Atender al cliente en la opcion de lista (opcion 3 del menu de clientes)</b></p>
     <img src="imagenes/captura11.png" alt="Captura del manual" width="600">
+    
 </body>
 </html>
