--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
     <img src="imagenes/captura10.png" alt="Captura del manual" width="600">
     <p><b>Atender al cliente en la opcion de lista (opcion 3 del menu de clientes)</b></p>
     <img src="imagenes/captura11.png" alt="Captura del manual" width="600">
+    <p>Si introducimos la opcion "4" podremos ver la lista de clientes que hay en espera</p>
+    <p>Si introducimos la opcion 0 volveremos al menu principal<p></p>
+    <img src="imagenes/captura12.png" alt="Captura del manual" width="600">
+    <h1> Menú de Tareas </h1>
+    <p>Si introducimos la opcion 3 del menu principal entraremos al menu de tareas y si introducimos la opcion 1podremos agregar una nueva tarea</p
+    <img src="imagenes/captura12.png" alt="Captura del manual" width="600">
+    <p>Despues de agregar la tarea nos mostrara la tarea que se agrego
+    
+
     
 </body>
 </html>
