--- a/index.html
+++ b/index.html
@@ -63,11 +63,35 @@
     <p>Si introducimos la opcion 0 volveremos al menu principal<p></p>
     <img src="imagenes/captura12.png" alt="Captura del manual" width="600">
     <h1> Menú de Tareas </h1>
-    <p>Si introducimos la opcion 3 del menu principal entraremos al menu de tareas y si introducimos la opcion 1podremos agregar una nueva tarea</p
-    <img src="imagenes/captura12.png" alt="Captura del manual" width="600">
-    <p>Despues de agregar la tarea nos mostrara la tarea que se agrego
-    
-
-    
+    <p>Si introducimos la opcion 3 del menu principal entraremos al menu de tareas y si introducimos la opcion 1 podremos agregar una nueva tarea<p>
+    <img src="imagenes/captura13.png" alt="Captura del manual" width="600">
+    <p>Despues de agregar la tarea nos mostrara la tarea que se agrego<p>
+    <img src="imagenes/captura14.png" alt="Captura del manual" width="600">
+    <p>Si introduces la opcion 2 eliminaras las tareas</p>
+    <img src="imagenes/captura15.png" alt="Captura del manual" width="600">
+    <img src="imagenes/captura16.png" alt="Captura del manual" width="600">
+    <p>Si introduces la opcion 3 podras buscar la tarea por texto</p>
+    <img src="imagenes/captura17.png" alt="Captura del manual" width="600">
+    <p>Si introduces la opcion 4 podras ver todas las tareas en lista</p>
+    <img src="imagenes/captura18.png" alt="Captura del manual" width="600">
+    <p>Si introduces la opcion 0 volveras al menu principal</p>
+    <h1>Opcion 4 del menu "Ver todo"</h1>
+    <p>Si introduces la opcion 4 del menu principal podras ver todas las emergencias, clientes y tareas</p>
+    <img src="imagenes/captura19.png" alt="Captura del manual" width="600">
+    <p>Si introduces la opcion 0 volveras al menu principal</p>
+    <h1>Opcion 5 del menu "Empleados"</h1>
+    <p>Si introduces la opcion 5 del menu principal podras ver los empleados</p>
+    <p>Si introduces la opcion "1" podras ver quien es el CEO</p>
+    <img src="imagenes/captura20.png" alt="Captura del manual" width="600">
+    <p>Si introduces la opcion "2" podras ver quienes son los empleados de caja</p>
+    <img src="imagenes/captura21.png" alt="Captura del manual" width="600">
+    <p>Si introduces la opcion "3" podras ver quienes son los empleados de cocina</p>
+    <img src="imagenes/captura22.png" alt="Captura del manual" width="600">
+    <p>Si introduces la opcion "4" podras ver quienes son los meseros</p>
+    <img src="imagenes/captura23.png" alt="Captura del manual" width="600">
+    <p>Si introduces la opcion 0 volveras al menu principal</p>
+    <h1>Salir</h1>
+    <p>Si introduces la opcion 6 del menu principal podras salir del programa</p>
+    <img src="imagenes/captura24.png" alt="Captura del manual
 </body>
 </html>
