--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     <p>Si introducimos la opcion 0 volveremos al menu principal<p></p>
     <img src="imagenes/captura12.png" alt="Captura del manual" width="600">
     <h1> Menú de Tareas </h1>
-    <p>Si introducimos la opcion 3 del menu principal entraremos al menu de tareas y si introducimos la opcion 1 podremos agregar una nueva tarea<p>
+    <p>Si introducimos la opcion 3 del menu principal entraremos al menu de tareas y si 
+        introducimos la opcion 1 podremos agregar una nueva tarea<p>
     <img src="imagenes/captura13.png" alt="Captura del manual" width="600">
     <p>Despues de agregar la tarea nos mostrara la tarea que se agrego<p>
     <img src="imagenes/captura14.png" alt="Captura del manual" width="600">
@@ -92,6 +93,6 @@
     <p>Si introduces la opcion 0 volveras al menu principal</p>
     <h1>Salir</h1>
     <p>Si introduces la opcion 6 del menu principal podras salir del programa</p>
-    <img src="imagenes/captura24.png" alt="Captura del manual
+    <img src="imagenes/captura24.png" alt="Captura del manual>" width="600">
 </body>
 </html>
