--- a/index.html
+++ b/index.html
@@ -92,6 +92,6 @@
     <p>Si introduces la opcion 0 volveras al menu principal</p>
     <h1>Salir</h1>
     <p>Si introduces la opcion 6 del menu principal podras salir del programa</p>
-    <img src="imagenes/capturalol2.png" alt="Captura del manual>" width="600">
+    <img src="imagenes/captura24.png" alt="Captura del manual>" width="600">
 </body>
 </html>
