--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
 
         p {
-            margin: 10px 0; /* Espaciado entre párrafos */
+            margin: 10px 0;
         }
     </style>
 </head>
