--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
     <p>Si das enter podrás ver el menú principal donde podrás ver las emergencias, atender clientes, 
         gestionar las tareas, ver todo, los empleados y salir</p>
     <img src="imagenes/captura1.png" alt="Captura del manual" width="600">
+    <h1> Menú de Emergencias </h1>
     <p>Si introduces "1" podrás ver el primer menú de emergencias y si nuevamente introduces 
         la opción 1 podrás agregar una nueva emergencia</p>
     <img src="imagenes/captura2.png" alt="Captura del manual" width="600">
@@ -260,6 +261,10 @@
     <p>Si introduces la opcion "4" podras ver quienes son los meseros</p>
     <img src="imagenes/captura23.png" alt="Captura del manual" width="600">
     <p>Si introduces la opcion 0 volveras al menu principal</p>
+    <h1>Busqueda de Datos</h1>
+
+
+
     <h1>Salir</h1>
     <p>Si introduces la opcion 6 del menu principal podras salir del programa</p>
     <img src="imagenes/captura24.png" alt="Captura del manual>" width="600">
