--- a/index.html
+++ b/index.html
@@ -261,10 +261,17 @@
     <p>Si introduces la opcion "4" podras ver quienes son los meseros</p>
     <img src="imagenes/captura23.png" alt="Captura del manual" width="600">
     <p>Si introduces la opcion 0 volveras al menu principal</p>
-    <h1>Busqueda de Datos</h1>
-
-
-
+    <h1>Busquedas y Reportes</h1>
+    <p>Si introducimos la opcion "6" en el menu principal nos llevara al apartado donde podremos ver el estado detallado de las mesas,
+        ordenar clientes por orden alfabetico y salir al menu central
+    </p>
+    <img src="imagenes/captura25.png" alt="Captura del manual" width="600">
+    <p>Si introducimos la opcion 1 podremos ver el estado detallado de las mesas como se ve a continuacion</p>
+    <img src="imagenes/captura26.png" alt="Captura del manual" width="600">
+    <p>Si introducimos la opcion 2 podremos ordenar los clientes alfabeticamente</p>
+    <img src="imagenes/captura27.png" alt="Captura del manual" width="600">
+    <p>Si introducimos la opcion 0 volveremos al menu principal</p>
+    <img src="imagenes/captura28.png" alt="Captura del manual" width="600">
     <h1>Salir</h1>
     <p>Si introduces la opcion 6 del menu principal podras salir del programa</p>
     <img src="imagenes/captura24.png" alt="Captura del manual>" width="600">
